[FIX] Button container set to 'grow' to fix the right-hand alignment.

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -98,6 +98,7 @@ $tile-bg:      #f0f0f0;
 
         .btn-holder {
             float: right;
+            flex-grow: 1;
             text-align: right;
             min-width: 15em;
             margin: 0 0 1.5em 1.5em;
